methods.flowerpot.FlowerPot.scala.error
Compilation error:
FlowerPot:2: error: not found: value petale
  setBrushColor(petale)
                ^